# cookiecutter_demo

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/cookiecutter_demo/: __init__.py
tests/: test_cookiecutter_demo.py
