[tool.poetry]
name = "cookiecutter_demo"
version = "0.1.0"
description = "A cookiecutter  demo!"
authors = ["netsgnut"]
license = "CC0 v1.0 Universal"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
matplotlib = ">=3.6.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
